# NanoVM

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  NanoVM.sln  README  README.md
NanoAssembler/: CMakeLists.txt  Mapper.cpp  Mapper.h  Nano.cpp  NanoAssembler.cpp  NanoAssembler.h  NanoAssembler.vcxproj  NanoAssembler.vcxproj.filters  Types.h  pch.h
NanoDebugger/: CMakeLists.txt  Debugger.cpp  Instructions.cpp  Instructions.h  NanoDebugger.cpp  NanoDebugger.h  NanoDebugger.vcxproj  NanoDebugger.vcxproj.filters  pch.h
NanoUnitTests/: CMakeLists.txt  test.cpp
NanoVM/: CMakeLists.txt  Nano.cpp  NanoVM.cpp  NanoVM.h  NanoVM.vcxproj  NanoVM.vcxproj.filters  pch.h
NanoVMTest/: NanoVMTest.vcxproj  test.cpp
examples/: Functions.nano  Functions.nanoc  HelloWorld.nano  SieveOfEratosthenes.nano  arithmetic.nano  fibo.nano  fibo.nanoc  fibonacciSequence.nano  inc.nano  inc.nanoc  labels.nano  labels2.nano  labels2.nanoc  labels3.nano  labels4.nano  loop.nano  prime.nano  prime.nanoc  print.nanoc
